--- a/otifleks/sass/partials/_colors.scss
+++ b/otifleks/sass/partials/_colors.scss
@@ -4,7 +4,10 @@ $reach-blue: #0088c7;
 $menu-active: #0088c7;
 $menu-font: #232323;
 $reach-orange: #ffa73d;
-// Background colors: 
-
+// Background colors:
+$product-color-beewax: #FFA746;
+$product-color-sleep: #00456e;
+$product-color-flight: #895298;
+$product-color-hunter: #6a7967;
 // special colors
 /* ----------- end Colors ----------- */
